# docs/swagger.json
@@ -4,6 +4,59 @@
         "contact": {}
     },
     "paths": {
+        "/exercise/add/cycling": {
+            "post": {
+                "description": "Adds a new cycling exercise to the database.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exercises"
+                ],
+                "summary": "Add Cycling Exercise",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Exercise cycling Save details",
+                        "name": "exercise",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ExerciseCyclingSave"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ExerciseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/exercise/add/lifting": {
             "post": {
                 "description": "Adds a new exercise to the database.",
@@ -57,6 +110,103 @@
                 }
             }
         },
+        "/exercise/add/running": {
+            "post": {
+                "description": "Adds a new Running exercise to the database.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exercises"
+                ],
+                "summary": "Add Running Exercise",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Exercise Running Save details",
+                        "name": "exercise",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ExerciseRunningSave"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ExerciseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/exercise/get/cycling": {
+            "get": {
+                "description": "Get cycling exercises from userId.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exercises"
+                ],
+                "summary": "Get Exercise",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ExerciseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/exercise/get/lifting": {
             "get": {
                 "description": "Get lifting exercises from userId.",
@@ -70,6 +220,47 @@
                     "Exercises"
                 ],
                 "summary": "Get Exercise",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ExerciseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/exercise/get/running": {
+            "get": {
+                "description": "Retrieves all running exercises for a specific user.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exercises"
+                ],
+                "summary": "Get Running Exercises",
                 "parameters": [
                     {
                         "type": "string",
@@ -417,12 +608,29 @@
                 }
             }
         },
+        "models.ExerciseCyclingSave": {
+            "type": "object",
+            "properties": {
+                "averageSpeed": {
+                    "type": "integer"
+                },
+                "caloriesBurned": {
+                    "type": "integer"
+                },
+                "distanceKm": {
+                    "type": "integer"
+                },
+                "elevationGainM": {
+                    "type": "integer"
+                },
+                "workoutId": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.ExerciseLiftingSave": {
             "type": "object",
             "properties": {
-                "WorkoutId": {
-                    "type": "integer"
-                },
                 "exerciseName": {
                     "type": "string",
                     "maxLength": 100
@@ -434,6 +642,26 @@
                     "type": "integer"
                 },
                 "weight": {
+                    "type": "integer"
+                },
+                "workoutId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.ExerciseRunningSave": {
+            "type": "object",
+            "properties": {
+                "averagePace": {
+                    "type": "string"
+                },
+                "caloriesBurned": {
+                    "type": "integer"
+                },
+                "distanceKm": {
+                    "type": "integer"
+                },
+                "workoutId": {
                     "type": "integer"
                 }
             }
